--- a/trunk/RideDammit/src/htdoc/header.inc.html
+++ b/trunk/RideDammit/src/htdoc/header.inc.html
@@ -22,6 +22,6 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 <table border=0 cellpadding=0 cellspacing=0>
  <tr>
   <td><img src="<?php echo $RD_baseURL?>/RideDammit.png" width="64" height="64"></td>
-  <td><H1>Ride Dammit! <?php echo $pageTitle?></H1></td>
+  <td><H1><?php echo S_SITE_TITLE." ".$pageTitle?></H1></td>
  </tr>
 </table>
