--- a/trunk/RideDammit/src/htdoc/footer.inc.html
+++ b/trunk/RideDammit/src/htdoc/footer.inc.html
@@ -19,3 +19,4 @@ along with Ride Dammit!; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 */
 ?>
+<p class="tinyPrint">Powered by <a href="http://ridedammit.sourceforge.net">RD!</a></p>
